--- a/nibs/nibs/MenuTable.storyboard
+++ b/nibs/nibs/MenuTable.storyboard
@@ -63,6 +63,27 @@
                                             <outlet property="priceLabel" destination="kva-cK-ue2" id="TV0-PY-bBD"/>
                                         </connections>
                                     </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="PhotoCell" rowHeight="120" id="f35-Rk-eCc" customClass="MenuPhotoTableViewCell" customModule="nibs" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="99.5" width="375" height="120"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="f35-Rk-eCc" id="8k7-Gc-S1p">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="119.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="YHL-Ka-X0D">
+                                                    <rect key="frame" x="30" y="24.5" width="70" height="70"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="70" id="7eb-tF-5oP"/>
+                                                        <constraint firstAttribute="height" constant="70" id="Rej-i0-JiC"/>
+                                                    </constraints>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="YHL-Ka-X0D" firstAttribute="centerY" secondItem="8k7-Gc-S1p" secondAttribute="centerY" id="255-qb-KFV"/>
+                                                <constraint firstItem="YHL-Ka-X0D" firstAttribute="leading" secondItem="8k7-Gc-S1p" secondAttribute="leadingMargin" constant="15" id="8Mn-9L-h5T"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
                                 </prototypes>
                             </tableView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="M6v-Ic-8VS">
